# ZLibrary2KindleSkill

./: .env.example  CLAUDE.md  LICENSE  README.md  README_CN.md  SOP.md  SOP_CN.md  book-detail.yml  homepage.yml  mcp.json  pyproject.toml  skill.md  uv.toml
openspec/: config.yaml
openspec/changes/archive/2026-04-22-package-as-cli-and-mcp/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-22-package-as-cli-and-mcp/specs/claude-skill/: spec.md
openspec/changes/archive/2026-04-22-package-as-cli-and-mcp/specs/cli/: spec.md
openspec/changes/archive/2026-04-22-package-as-cli-and-mcp/specs/mcp-packaging/: spec.md
openspec/specs/kindle-email/: spec.md
openspec/specs/zlibrary-auth/: spec.md
openspec/specs/zlibrary-download/: spec.md
openspec/specs/zlibrary-search/: spec.md
src/: cli.py  config.py  server.py
src/mcp_tools/: kindle_send_email.py  zlibrary_download.py  zlibrary_login.py  zlibrary_search.py
src/services/: email_service.py  http_client.py  playwright_service.py  zlibrary_service.py
tests/: conftest.py  test_email_service.py  test_zlibrary_service.py
