[project]
name = "zlibrary2kindle"
version = "0.1.0"
description = "Local MCP to search ZLibrary, download books, and send to Kindle"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "mcp>=1.0.0",
    "httpx>=0.28.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
]
scripts = { zlib2k-cli = "src.cli:main" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "pyright>=1.1.350",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
